# sunaba-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/sunaba_cli/: cli.py  compose.py  sync.py
src/sunaba_cli/templates/agents/: AGENTS.md  CLAUDE.md  GEMINI.md  skills.md
src/sunaba_cli/templates/base/: bootstrap.sh  dependabot.yml  devcontainer.json  mcp.json
src/sunaba_cli/templates/stacks/: agents.json  aws.json  azure.json  docker.json  gcp.json  neon.json  nextjs.json  playwright.json  python.json
tests/: test_smoke.py
