[project]
name = "sunaba-cli"
version = "0.2.1"
description = "One-command devcontainer sandbox for AI agent development (Claude Code / Codex / Gemini CLI)"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "morimorijap" }]
keywords = ["devcontainer", "sandbox", "ai-agents", "claude-code", "codex", "gemini-cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.urls]
Repository = "https://github.com/morimorijap/sunaba-cli"
Issues = "https://github.com/morimorijap/sunaba-cli/issues"

[project.scripts]
sunaba = "sunaba_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunaba_cli"]

[tool.hatch.build.targets.wheel.force-include]
"src/sunaba_cli/templates" = "sunaba_cli/templates"
